Změna AJ textu - hp + case studies

--- a/www.topmonks.com/src/html/about-us/index.njk
+++ b/www.topmonks.com/src/html/about-us/index.njk
@@ -9,42 +9,47 @@
   <section id="how-we-work" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-page-header">
-        <h2>How we work</h2>
+        <h2>About us</h2>
         <blockquote>
-          <p>Success is a delivery not the time spent.</p>
+          <p>Success is delivered, not counted.</p>
         </blockquote>
-        <p>We don't need you messing around from 9 to 5 in the office. We want to deliver the perfection! As our
-          team is mostly distributed, we've worked diligently to improve the ways we work together, and with
-          our clients. Don't count hours, deliver!</p>
+        <p>We don’t need you messing around in the office from 9&nbsp;to 5.&nbsp;We want to
+          create and deliver perfection. Our team is remote and we have worked diligently
+          to improve the ways we work together and with our clients. We don’t count
+          hours, we focus on results.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Slack</h3>
-        <p>Effective communication is the essence of cooperation- not only across our projects, but also with some
-          of our customers. We don't care where do you sit, but once you are working, you should be available.</p>
+        <p>Effective communication is the essence of cooperation&nbsp;&ndash; not only across
+          our projects, but also with our customers. We don’t care where you sit, but
+          once you are working, you should make yourself available.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>GitHub</h3>
-        <p>All our projects are running in GitHub. Many of them also use GitHub Issues for tracking the progress.
-          Together with Slack it is the alpha and omega of our cooperation.</p>
+        <p>All our projects run through GitHub. Several also use GitHub Issues to track
+          progress. Together with Slack, these are the alpha and omega of our
+          cooperation.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Quip</h3>
-        <p>Here we share all the projects documentation, invoices, even our company library, basically our whole
-          knowledge. Ask rarous for his amazing cook book!</p>
+        <p>We share all our documentation, invoices and even our company library in
+          Quip. Ask Rarous for his amazing cookbook!</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Swarmpit</h3>
-        <p>Most of our projects are containerized and run in Docker Swarm environment. For management of these
-          we developed our own UI called Swarmpit.</p>
+        <p>Most of our projects are based in the Docker Swarm environment. To manage
+          these successfully, we developed our own UI called Swarmpit.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Monksheets</h3>
-        <p>Now let's shake-off all the useless administration! If you need to control your project costs, ask for
-          time-off or refund your expenses, you can do it online wherever and whenever you want from.</p>
+        <p>To look after your project costs, ask for some time off or have your expenses
+          refunded, our Monksheets are here for you. Wherever and whenever in the world
+          you&nbsp;are.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Trello</h3>
-        <p>Trello is a powerful tool to track the team's progress and to delegate the work.</p>
+        <p>Trello is a powerful tool to track the team’s&nbsp;progress and
+          delegate&nbsp;work.</p>
       </div>
     </div>
   </section>
@@ -85,23 +90,28 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Company values</h2>
         <ul>
-          <li>Learn or die. Teach or die. Only learning and teaching brains flourish.</li>
-          <li>Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</li>
-          <li>Be brave. Provide a sincere feedback regardless of the circumstances.</li>
-          <li>Your freedom can’t affect the freedom of others.</li>
-          <li>Success is a delivery not the time spent. Don’t wait to be asked for your next task, find
-            it yourself.
+          <li>Learn or die. Teach or die. Only those that keep their curiosity can flourish
+            and&nbsp;grow.
           </li>
-          <li>Life is a constant change. Embrace it.</li>
-          <li>Our company is a living organism interconnected with our partners, customers, and community.
-            There are no borders.
+          <li>An entrepreneurial mind is key. Feel free to reach for inspiration from
+            amongst your coworkers.
+          </li>
+          <li>Be brave. Offer honest feedback and be open to welcoming it as&nbsp;well.</li>
+          <li>Your freedom cannot affect the freedom of others.</li>
+          <li>Success is delivered, not counted. Don’t wait to be asked to do something, grab the opportunity
+            yourself.
+          </li>
+          <li>The only constant is change. Embrace it.</li>
+          <li>Our company is a living organism that connects our partners, customers and
+            community together. There are no borders.
           </li>
           <li>Give and you shall receive.</li>
-          <li>Weirdness, non-conformity is welcome.</li>
+          <li>Weirdness and non-conformity are welcome.</li>
         </ul>
-        <p>If you like these ideas, come <a href="/jobs/">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your
-            project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting
-          people.</p>
+        <p>If our values resonate with you, we want to <a href="/jobs/">hear from you</a> or <a
+            href="mailto:sales@topmonks.com">reach out to us</a> to have your project delivered by us. You can also pay
+          us a <a href="/contact/"> visit </a>,
+          we always enjoy meeting interesting people.</p>
       </div>
     </div>
   </section>
