--- a/www.topmonks.com/src/html/case-studies/adler/index.njk
+++ b/www.topmonks.com/src/html/case-studies/adler/index.njk
@@ -60,9 +60,10 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Adler</h2>
-          <h3>Adler is a leading supplier of promotional textiles in the Czech Republic and Europe. The company grew
-            very
-            fast, and with 250 employees, the IT department can't cover all of Adler's internal needs anymore.</h3>
+          <h3>Adler is the leading supplier of advertising textiles in the Czech Republic
+            and Europe. The company has experienced tremendous growth and with over
+            250&nbsp;employees, the IT department has reached out to us for a bit of
+            support.</h3>
           <ul class="tm-case-study__project-numbers-list">
             <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">30</strong>
               <p>days from the assignment till finished product</p></li>
@@ -102,9 +103,10 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-align-center">
-          <p>That's why TopMonks comes on the scene. Experience from similar projects has enabled us to come up with a
-            tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the
-            applications will be integrated into one comprehensive administration platform in the future.</p>
+          <p>Our experience from similar projects has helped us create a tailor-made
+            solution to automate the purchasing process, marketing and sales. Our ultimate
+            focus was on integrating all of these into one comprehensive administrative
+            platform.</p>
         </div>
       </div>
     </div>
@@ -115,9 +117,11 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--time">
-          <h3>Solution saves employees' time</h3>
-          <p>In close cooperation with the client, we created software that is not only nice but also user-friendly.
-            Besides, it saves employees' time through the automation of several workflows.</p>
+          <h3>Smart solutions save time</h3>
+          <p>In close cooperation with the client, we have
+            created a smart software that is user-friendly. Its biggest added value lies in
+            saving Adler’s&nbsp;employees’ time through the automation of multiple
+            workflows.</p>
         </div>
       </div>
     </div>
@@ -129,10 +133,9 @@
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--analysis">
           <h3>Detailed workflow analysis</h3>
-          <p>Detailed workflow and user behavior analysis have provided our UX designer with instant feedback on
-            prototyping. As a result, he was able to create an application that reflects the needs of a&nbsp;real
-            workflow on
-            the customer's side.</p>
+          <p>A&nbsp;detailed workflow and user behavior analysis have provided our UX designer
+            team with instant feedback on prototyping. As a result, we have created an
+            application that reflects the customer’s&nbsp;needs of a real workflow.</p>
         </div>
       </div>
     </div>
@@ -143,11 +146,12 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--prototype">
-          <h3>The prototype has already contained all the necessary information</h3>
-          <p>The prototype of the application has already contained a great foundation and all the necessary information
-            for the Front-end and Back-end development. Therefore, there was no delay due to the need for more in-depth
-            specification of the assignment. As a result, developers have been able to design and set up application
-            architecture, data flows, and development environment settings without any delay.</p>
+          <h3>The prototype presented all necessary information</h3>
+          <p>The application’s&nbsp;pro&shy;totype came with a great foundation of crucial
+            information, which significantly accelerated the front-end and back-end
+            development stages. As a result, our developers were able to swiftly design and
+            set up the application’s&nbsp;ar&shy;chitecture, data flow and development
+            environment settings.</p>
         </div>
       </div>
     </div>
@@ -158,11 +162,11 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--feedback">
-          <h3>Proactive feedback within the team</h3>
-          <p>The quality of collaboration and proactive feedback within the team also helped accelerate the process. The
-            development was continuously linked to the prototype, which led to completing the application in the
-            shortest
-            possible time without compromising the quality of the output.</p>
+          <h3>Proactive feedback</h3>
+          <p>Open communication was of great help on this project and the feedback that
+            had been received helped accelerate the overall process. This led to finishing
+            the application in the shortest amount of time possible without compromising its
+            quality.</p>
         </div>
       </div>
     </div>
@@ -172,8 +176,9 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-align-center">
-          <p>The latest javascript frameworks were used to guarantee the application's scalability in the future. For
-            Back-end these were Node.js, mocha, sequelize, and React.js for the Front-end.</p>
+          <p>The latest javascript frameworks were used to guarantee the
+            application’s&nbsp;sca&shy;lability in the future. We have used Node.js, mocha,
+            sequelize for back-end, and React.js for front-end.</p>
           <ul class="tm-case-study__technologies">
             <li>
               <svg xmlns="http://www.w3.org/2000/svg" version="1.2" viewBox="0 0 442.37 270.929"><title>Node.js
