--- a/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
+++ b/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
@@ -63,8 +63,9 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2><span class="no-transform ">WebAPI</span> Česká Spořitelna</h2>
-          <h3>The WebAPI project is an evidence TopMonks not only brings innovation into the corporate environment but
-            also steers it in the exact right direction.</h3>
+          <h3>Through the WebAPI project, TopMonks has proven that we not only bring
+            innovation into the corporate environment, but also steer it in the right
+            direction.</h3>
           <ul class="tm-case-study__project-numbers-list">
             <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">4</strong>
               <p>years in production</p></li>
@@ -107,10 +108,10 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p>Long before the EU <abbr title="Payment Services Directive">PSD2</abbr> directive was drafted, long before
-            public APIs became a trend in banking, even long before such ideas became mainstream, our team already had
-            known very well that public REST API gateways, powered by cloud solutions, were the way to go for banks of
-            future.</p>
+          <p>Long before the EU directive was drafted, long before public APIs became a
+            trend in the banking sphere, and even long before these ideas became mainstream,
+            our team had already known very well that public REST API gateways powered by
+            cloud solutions were the way to go for&nbsp;banks.</p>
         </div>
       </div>
     </div>
@@ -122,10 +123,11 @@
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--integration">
           <h3>Read-only? Think bigger</h3>
-          <p>So when Česká Spořitelna approached us in 2014 with an idea to build a simple mobile app to provide
-            read-only access to your personal account, we suggested them to think bigger. Together we started developing
-            a genuinely groundbreaking custom-made cloud integration platform to be used internally by the bank, and
-            externally by the public.</p>
+          <p>So when Česká Spořitelna approached us back in 2014&nbsp;with the idea to
+            build a simple mobile app to provide read-only access to clients’ personal
+            accounts, we humbly suggested they think bigger. Together, we dived into
+            developing a truly groundbreaking custom-made cloud integration platform for
+            both the bank’s&nbsp;internal and external use for its clients.</p>
         </div>
       </div>
     </div>
@@ -136,11 +138,11 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
-          <h3>The heart of client's infrastructure</h3>
-          <p>Today WebAPI has become the heart of our client's infrastructure, enabling them to stay on the
-            technological edge as a bank with a 21st-century-grade public interface. Most of the things you can think
-            of, including their new George internet banking, run over the WebAPI platform, which is currently also being
-            adopted by the whole Erste Group.</p>
+          <h3>The heart of Česká Spořitelna’s&nbsp;in&shy;frastructure</h3>
+          <p>Today, WebAPI enables our client to stay on the technological edge with a
+            21st century grade public interface. Most of the projects that come to your
+            mind, including the George internet banking, run on the WebAPI platform. The
+            platform is currently also being adopted by the whole Erste&nbsp;Group.</p>
         </div>
       </div>
     </div>
@@ -152,22 +154,20 @@
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper--mobile">
           <h3>Miles ahead of competitors</h3>
-          <p>They are on the move, miles ahead of competitors:</p>
+          <p>They are on the move, miles ahead of their competitors:</p>
           <ul class="formatted">
-            <li>A significant subset of bank's APIs was exposed publicly to 3rd party developers to design & test their
-              own layer of applications built on top of it.
-            </li>
-            <li>All the cloud services were exposed in a standardized uniform manner (RESTfull API) to avoid integration
-              chaos, and reduce costs.
-            </li>
-            <li>WebAPI provides a proven, massively scalable infrastructure, handling more than 8 million requests per
-              day, supported by an easy to use <a href="https://developers.erstegroup.com/">developer portal</a>,
-              creating a platform that can be reconfigured live, instantly with 0 downtimes.
-            </li>
-            <li>Our client got the tools to manage system complexity and redistribute resources; to impose limits on the
-              number and duration of requests, manage access to services in one place, as well as to collect audit logs
-              for analysis, and much more...
-            </li>
+            <li>A&nbsp;significant subset of the bank’s&nbsp;APIs was exposed publicly to 3rd party
+              developers to design and test their own layer of applications built on top
+              of&nbsp;it.</li>
+            <li>All cloud services were revealed in a standardized uniform manner (RESTful
+              API) to avoid potential integration chaos and to reduce&nbsp;costs.</li>
+            <li>WebAPI provides a massively scalable infrastructure that handles more than
+              8&nbsp;million requests on a daily basis, supported by an easy-to-use <a href="https://developers.erstegroup.com/"> developer portal</a>, thus creating
+              a platform that can be reconfigured live and instantly with 0&nbsp;downtimes.</li>
+            <li>Our client received the tools to successfully manage the complex system and
+              redistribute resources where needed to impose limits on the amount and duration
+              of requests, manage access to services in one place, collect audit logs for
+              analysis, and much&nbsp;more.</li>
           </ul>
         </div>
       </div>
@@ -178,9 +178,11 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p>Do you also want to make a leap from monoliths to micro-services? From server racks to the cloud? Contact
-            us and get ahead in the FinTech industry. Benefit from years of experience & expertise our team gained while
-            working for the largest bank in the Czech Republic.</p>
+          <p>Does switching from monoliths to microservices sound good? How about jumping
+            on the cloud from server racks? If this resonates with you, make sure to reach
+            out to us to get a headstart in the FinTech industry. Take advantage of our
+            years of experience and the expertise our team has gained while working with the
+            largest bank in the country.</p>
         </div>
       </div>
     </div>
