--- a/www.topmonks.com/src/html/components/case-studies/index.njk
+++ b/www.topmonks.com/src/html/components/case-studies/index.njk
@@ -19,8 +19,9 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_gorealeurope') }}</div>
             </div>
             <h3>Go Real Europe</h3></a>
-          <p>GRE is a fast-growing travel startup specializing in crafting personalized itineraries for any type of
-            traveler wanting to touch down and explore the gems of Europe.</p>
+          <p>GRE is a rapidly growing travel startup that specializes in crafting
+            personalized itineraries for travelers of all kinds who want to explore the
+            magic European countries&nbsp;offer.</p>
         </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
@@ -31,9 +32,8 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_pricefx') }}</div>
             </div>
             <h3>Pricefx</h3></a>
-          <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and
-            also
-            helping to improve UX of the current website.</p>
+          <p>We provided professional consultations to support a rapidly expanding portfolio of customers
+            and improve the UX of the current website.</p>
         </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
@@ -44,9 +44,8 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_cs') }}</div>
             </div>
             <h3>Česká Spořitelna WebAPI</h3></a>
-          <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of
-            public
-            API.</p>
+          <p>A&nbsp;custom-made integration platform for the bank’s&nbsp;internal use as well as
+            external in the form of a public&nbsp;API.</p>
         </div>
       {% endif %}
 
@@ -58,8 +57,9 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_adler') }}</div>
             </div>
             <h3>Adler</h3></a>
-          <p>In close cooperation with the client, we created software that is not only nice but also user-friendly.
-            Besides, it saves employees' time through the automation of several workflows.</p>
+          <p>In close cooperation with the client, we have created a smart software that
+            is user-friendly. Its biggest added value lies in saving Adler’s&nbsp;employees’
+            time through the automation of multiple workflows.</p>
         </div>
       {% endif %}
 
@@ -71,8 +71,9 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_profi-option') }}</div>
             </div>
             <h3>Profi Option</h3></a>
-          <p>Our team was asked to review the 24Cryptex trading app which had problems
-            with usability, overall look and feel of their platform.</p>
+          <p>Our team’s&nbsp;task was to review 24Cryptex’s&nbsp;trading app which experienced
+            some difficulties with its usability and the overall look and feel of their
+            platform.</p>
         </div>
       {% endif %}
 
@@ -84,9 +85,9 @@
               <div class="tm-bgnd-wrapper">{{ sprite('img_logo_xixoio') }}</div>
             </div>
             <h3>XIXOIO</h3></a>
-          <p>The TopMonks Blockchain team was approached at the time where their own IPCO
-            was in the preparation. In just 3&nbsp;days we have managed to draft the complete
-            token issuance architecture.</p>
+          <p>Our TopMonks Blockchain team was approached at the same time Xixoio’s&nbsp;IPCO
+            was being prepared. It only took us three days to draft the complete token
+            issuance architecture.</p>
         </div>
       {% endif %}
     </div>
