--- a/www.topmonks.com/src/html/case-studies/profi-option/index.njk
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.njk
@@ -152,9 +152,9 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center intro_main-text title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>24Cryptex.com</h1>
-        <p>24Cryptex is the trading platform with crypto assets based on binary options.
-          Blockchain team of TopMonks delivered backend and frontend solution, design of
-          the platform and usability&nbsp;tests.</p>
+        <p>24Cryptex is a trading platform with crypto assets based on binary options.
+          TopMonks’ in-house blockchain team delivered backend and frontend solutions,
+          the design of their platform as well as&nbsp;tests.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <picture>
@@ -174,8 +174,9 @@
       </div>
       <div id="about-project" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>About project</h3>
-        <p>Our team was asked to review the 24Cryptex trading app which had problems
-          with usability, overall look and feel of their platform.</p>
+        <p>Our team’s&nbsp;task was to review 24Cryptex’s&nbsp;trading app which experienced
+          some difficulties with its usability and the overall look and feel of their
+          platform.</p>
         <p><b>UX Designer</b>: Tomáš Paulus<br>
           <b>Project Manager</b>: Lea Petrášová <br>
           <b>Developers</b>: Jiří Lafek, Vašek&nbsp;Slavík</p>
@@ -183,17 +184,18 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Old version problems</h3>
         <ul class="polygon_yellow">
-          <li><a>Outdated UI and overall problems with usability and understandability</a></li>
-          <li><a>Lots of hidden features that prevented seamless UX</a></li>
-          <li><a>Bad designed information architecture</a></li>
+          <li><a>Slightly outdated UI and overall problems with usability and clarity.</a></li>
+          <li><a>Lots of hidden features that prevent a smooth UX.</a></li>
+          <li><a>Poorly designed information architecture.</a></li>
         </ul>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Redesign goals</h3>
         <ul class="polygon_green">
-          <li><a>Run user tests, check analytics and make heuristic evaluation of the&nbsp;app</a></li>
-          <li><a>Refresh UI but keep it calm, design new typography and color schemes</a></li>
-          <li><a>Make it more intuitive and easy to understand</a></li>
+          <li><a>Run user tests, check analytics and make a heuristic evaluation of
+              the&nbsp;app.</a></li>
+          <li><a>Refresh UI, design a new typography and color schemes.</a></li>
+          <li><a>Make it more intuitive and easily understandable.</a></li>
         </ul>
       </div>
     </div>
@@ -252,11 +254,11 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Original design of platform</h2>
-        <p>First version of crypto binary trading platform was designed in 2016&nbsp;without
-          research or any user tests. Whole platform has been developed without further
-          assistance of UI/UX designers so we had a lot of space for creativity and
-          research based design.</p>
+        <h2>The original design of the platform</h2>
+        <p>The first version of the crypto binary trading platform was designed in
+          2016&nbsp;without any prior research or user tests. The whole platform was developed
+          without further assistance of any UI/UX designers, which offered plenty of space
+          for our creativity and research-based design.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner design_platforms">
@@ -301,11 +303,11 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Visual and testing</h2>
-        <p>After initial research, competitive analysis and guerilla testing we
-          re-created whole sitemap, information architecture and on-boarding flow. The
-          next logical step was to create new style-guide and refresh platform for
-          year&nbsp;2018.</p>
+        <h2>Visuals and testing</h2>
+        <p>After the initial research which included a competitive analysis and guerilla
+          testing, we recreated the whole sitemap, information architecture and an
+          onboarding flow. The next logical step was to create a new style-guide and
+          refresh the platform for&nbsp;2018.</p>
       </div>
     </div>
   </div>
@@ -424,10 +426,10 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Refreshed visuals</h2>
-        <p>Our team tested 4&nbsp;colour schemes for light version and 2&nbsp;schemes for a dark
-          version of the app. The final design can be seen down below. We used a lot of
-          negative space, bigger fonts, brighter colours and we tried to highlight the
-          most important information for&nbsp;users.</p>
+        <p>Our team tested various color schemes for the light version and 2&nbsp;schemes
+          for the dark version of the app. Check out the final design below. We used a lot
+          of negative space, bigger fonts, brighter colors and finally, we highlighted the
+          most vital information for&nbsp;users.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner">
@@ -501,9 +503,10 @@
                   {{ "topmonks.com/profi-option/prototypes.01.png" | cloudinaryUrl(width=500,dpr=2) }} 2x"
           width="100%" height="auto">
         <h3>Qualitative testing</h3>
-        <p>We tested the app with users who are regular traders and also with people who
-          just want to try binary trading. After the initial set of subjects, we did a lot
-          of changes to make the platform even more usable.</p>
+        <p>We brought the app to life first by having it tested by users who were
+          regular traders and also people who were simply interested in binary trading.
+          After the initial phase of testing, we were lucky to find some opportunities for
+          making the platform even more user-friendly.</p>
       </div>
       <div
         class="prototypes_design mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -514,10 +517,10 @@
                      {{ "topmonks.com/profi-option/prototypes.02.png" | cloudinaryUrl(width=500,dpr=2) }} 2x"
              width="100%" height="auto">
         <h3>Clickable prototypes</h3>
-        <p>Our UX Designer created clickable prototypes in Figma. These prototypes were
-          used by developers to understand the interactivity of the trading platform. We
-          also used these prototypes for user testing before implementing visual changes
-          to the live&nbsp;app.</p>
+        <p>Our UX designer team created the clickable prototypes in Figma. These
+          prototypes were used by developers to understand the interactivity of the
+          trading platform. We also used these prototypes for user testing before
+          implementing the visual changes to the live&nbsp;app.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <hr>
@@ -530,12 +533,12 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h3>What’s&nbsp;the outcome? Satisfied customer.</h3>
+        <h3>What was the outcome? A&nbsp;satisfied customer.</h3>
       </div>
       <div class="box title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>Tomáš Paulus, UX designer from TopMonks, really knows what he's&nbsp;doing.
-          Based on his research, he adapted the platform into a usable form with a
-          professional design. We certainly recommend him further.</p>
+        <p>Tomáš Paulus, a UX designer from TopMonks, really knows his business. Based
+          on his research, he adapted the platform into a highly usable form with an
+          immaculate design. Hit us up if you are interested in his&nbsp;work.</p>
         <hr>
         <span itemprop="name">Karel Dostál</span>,<span> 24Cryptex</span>
       </div>
@@ -550,9 +553,9 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h2>That’s&nbsp;all Folks!</h2>
-        <p>We are always on the lookout for new interesting projects with good people.
-          Need a hand? We have 120&nbsp;of them. If you would like to discuss further, share
-          feedback or ask any questions, please get in touch with&nbsp;Lea.</p>
+        <p>We are always on the lookout for new and interesting projects. If you are in
+          need of any help, let us know. We always welcome feedback and any questions you
+          might&nbsp;have.</p>
       </div>
       <div style="padding: 24px; align-self: center"
            class="box contact_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop"
@@ -610,8 +613,8 @@
         <div
           class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <h4>About us</h4>
-          <p class="tm-text--margin-top">We are your software development partners, experienced with both startup and
-            corporate environment.</p>
+          <p class="tm-text--margin-top">We are your partners for software development. Our Monks are experienced both
+            in the startup and corporate environments.</p>
           <div itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"><span
               itemprop="legalName">TopMonks s.r.o.</span>
             <div class="mailto"><a href="mailto:info@topmonks.com" itemprop="email">info@topmonks.com</a></div>
