[www.topmonks.com] Text coorrections

--- a/www.topmonks.com/src/html/about-us/index.njk
+++ b/www.topmonks.com/src/html/about-us/index.njk
@@ -11,12 +11,12 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-page-header">
         <h2>About us</h2>
         <blockquote>
-          <p>Success is delivered, not counted.</p>
+          <p>Success is a delivery not the time spent.</p>
         </blockquote>
         <p>We don’t need you messing around in the office from 9&nbsp;to 5.&nbsp;We want to
           create and deliver perfection. Our team is remote and we have worked diligently
           to improve the ways we work together and with our clients. We don’t count
-          hours, we focus on results.</p>
+          hours, we deliver!</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Slack</h3>
@@ -33,11 +33,11 @@
       <div class="box mdc-layout-grid__cell">
         <h3>Quip</h3>
         <p>We share all our documentation, invoices and even our company library in
-          Quip. Ask Rarous for his amazing cookbook!</p>
+          Quip. Ask rarouš for his amazing cookbook!</p>
       </div>
       <div class="box mdc-layout-grid__cell">
         <h3>Swarmpit</h3>
-        <p>Most of our projects are based in the Docker Swarm environment. To manage
+        <p>Many of our projects are containerized and run in Docker Swarm environment. To manage
           these successfully, we developed our own UI called Swarmpit.</p>
       </div>
       <div class="box mdc-layout-grid__cell">
@@ -90,28 +90,23 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Company values</h2>
         <ul>
-          <li>Learn or die. Teach or die. Only those that keep their curiosity can flourish
-            and&nbsp;grow.
+          <li>Learn or die. Teach or die. Only learning and teaching brains flourish.</li>
+          <li>Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</li>
+          <li>Be brave. Provide a sincere feedback regardless of the circumstances.</li>
+          <li>Your freedom can’t affect the freedom of others.</li>
+          <li>Success is a delivery not the time spent. Don’t wait to be asked for your next task, find
+            it yourself.
           </li>
-          <li>An entrepreneurial mind is key. Feel free to reach for inspiration from
-            amongst your coworkers.
-          </li>
-          <li>Be brave. Offer honest feedback and be open to welcoming it as&nbsp;well.</li>
-          <li>Your freedom cannot affect the freedom of others.</li>
-          <li>Success is delivered, not counted. Don’t wait to be asked to do something, grab the opportunity
-            yourself.
-          </li>
-          <li>The only constant is change. Embrace it.</li>
-          <li>Our company is a living organism that connects our partners, customers and
-            community together. There are no borders.
+          <li>Life is a constant change. Embrace it.</li>
+          <li>Our company is a living organism interconnected with our partners, customers, and community.
+            There are no borders.
           </li>
           <li>Give and you shall receive.</li>
-          <li>Weirdness and non-conformity are welcome.</li>
+          <li>Weirdness, non-conformity is welcome.</li>
         </ul>
         <p>If our values resonate with you, we want to <a href="/jobs/">hear from you</a> or <a
-            href="mailto:sales@topmonks.com">reach out to us</a> to have your project delivered by us. You can also pay
-          us a <a href="/contact/"> visit </a>,
-          we always enjoy meeting interesting people.</p>
+            href="mailto:sales@topmonks.com">reach out to us</a> to have your project delivered by us.
+          You can also pay us a <a href="/contact/">visit</a>, we always enjoy meeting interesting people.</p>
       </div>
     </div>
   </section>
