--- a/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
+++ b/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
@@ -108,10 +108,11 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p>Long before the EU directive was drafted, long before public APIs became a
-            trend in the banking sphere, and even long before these ideas became mainstream,
-            our team had already known very well that public REST API gateways powered by
-            cloud solutions were the way to go for&nbsp;banks.</p>
+          <p>Long before the EU's <abbr title="Payment Services Directive">PSD2</abbr>
+            directive was drafted, long before public APIs became a trend in the banking sphere,
+            and even long before these ideas became mainstream, our team had already known
+            very well that public REST API gateways powered by cloud solutions were the
+            way to go for&nbsp;banks.</p>
         </div>
       </div>
     </div>
@@ -138,7 +139,7 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
-          <h3>The heart of Česká Spořitelna’s&nbsp;in&shy;frastructure</h3>
+          <h3>The heart of Česká Spořitelna’s&nbsp;infra&shy;structure</h3>
           <p>Today, WebAPI enables our client to stay on the technological edge with a
             21st century grade public interface. Most of the projects that come to your
             mind, including the George internet banking, run on the WebAPI platform. The
