--- a/www.topmonks.com/src/html/case-studies/profi-option/index.njk
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.njk
@@ -153,8 +153,8 @@
       <div class="text-center intro_main-text title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>24Cryptex.com</h1>
         <p>24Cryptex is a trading platform with crypto assets based on binary options.
-          TopMonks’ in-house blockchain team delivered backend and frontend solutions,
-          the design of their platform as well as&nbsp;tests.</p>
+          TopMonks Blockchain team delivered backend and frontend solutions,
+          the design of their platform as well as&nbsp;usability tests.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <picture>
@@ -517,7 +517,7 @@
                      {{ "topmonks.com/profi-option/prototypes.02.png" | cloudinaryUrl(width=500,dpr=2) }} 2x"
              width="100%" height="auto">
         <h3>Clickable prototypes</h3>
-        <p>Our UX designer team created the clickable prototypes in Figma. These
+        <p>Our UX team created the clickable prototypes in Figma. These
           prototypes were used by developers to understand the interactivity of the
           trading platform. We also used these prototypes for user testing before
           implementing the visual changes to the live&nbsp;app.</p>
